--- a/slide_2_practice.Rmd
+++ b/slide_2_practice.Rmd
@@ -1,8 +1,8 @@
 ---
-title: '構造推定入門: 演習課題'
+title: '離散選択モデル: 演習'
 subtitle: '応用社会科学RAブートキャンプ'
 author: '講師: 遠山祐太 (早稲田大学)'
-date: '最終更新: `r Sys.time()`'
+date: '最終更新: `r format(Sys.time(), format = "%Y-%m-%d %X")`'
 output:
   xaringan::moon_reader:
     css: xaringan-themer.css
@@ -29,43 +29,15 @@ name: logistics
 - 自分で解けそう＆気になった問題から取り掛かってください。
 
 
-- 注１：問題の指示が若干ふわっとしているところがあります。
-  - 曖昧な箇所はご自身で考えて回答してください。
-  
-
-- 注２：模範解答は特に用意していません
-  - **実際のRA Workに「模範解答」はありません！**
-  - 皆さんと同時に、私も手元で解いていきます。
-  
-  
-- **質問大歓迎！！**
-  - 今夜は一泊する予定ですので、授業後・夕食後などにもお気軽にどうぞ。
-
 
 ---
-## 課題１：利潤最大化価格
-
-- きのこの山とたけのこの里の限界費用（単位費用）を１２０円とする。
-
-- 講義パートにおけるデータ＆ランダム係数ロジットの推定結果に基づいて、利潤最大化するような価格について検討しよう。
-
-- 問１：たけのこの里の価格を200円に固定したとき、きのこの山の利潤が最大になるようなきのこの山の価格を求めよ。
-
-- 問２：きのこの山の価格を200円に固定したとき、たけのこの里の利潤が最大になるようなたけのこの里の価格を求めよ。
-
-- 【難しめ】問３：きのこの山・たけのこの里の価格を同時に動かせるとき、きのこの山とたけのこの里の**合計利潤**が最大になるような価格を求めよ。
-
-- ヒント：利潤を計算する関数を定義し、それについて数値最適化しよう。
+## 課題１：RA ブートキャンプのサーベイデータ
 
 
----
-## 課題２：RA ブートキャンプのサーベイデータ
+- 皆さんに回答してもらったきのこ・たけのこサーベイの結果が`data/KTSurvey_RABootcamp2024_cleaned.csv` にあります。
 
 
-- 皆さんに到着初日に回答してもらったきのこ・たけのこサーベイの結果が`data/KTSurvey_RABootcamp2023_cleaned.csv` にあります。
-
-
-- このデータを用いて、講義パートで行った分析(`mlogit`での推定、フルスクラッチでの推定)を実行せよ。また、結果の差について検討＆議論せよ。
+- このデータを用いて、講義パートで行った分析(`mlogit`での推定)を実行せよ。また、結果の差について検討＆議論せよ。
 
 
 - コメント：データは最低限のクリーニングをしたもの。    
@@ -74,62 +46,10 @@ name: logistics
   - データ共有についての不同意者の回答を落としている。
 
 ---
-## 課題３：個人属性の影響
-
-- サーベイでは消費者属性（性別、年齢、出身地、などなど）についても聞いている。
+## 課題２：離散選択モデルの定式化
 
 
-- きのこの山・たけのこの里への選好が、消費者属性に依存するようなモデルを考えて推定せよ。
-
-- 例として：
-$$
-\begin{aligned}
-U_{i, k, Kinoko} &=\alpha_{Kinoko} + \gamma_{Kinoko}^{age} \cdot age_i - \beta \cdot p_{k, Kinoko} +\epsilon_{i, k, Kinoko} \\
-U_{i, k, Takenoko} &=\alpha_{Takenoko} + \gamma_{Takenoko}^{age} \cdot age_i - \beta \cdot p_{k, Takenoko}+\epsilon_{i, k,Takenoko} \\
-U_{i, k, outside} &= \epsilon_{i, k, outside}
-\end{aligned}
-$$
-
-- ヒント１：`mlogit`で推定する前に、消費者属性と選択パターンの相関を見てみましょう。
-
----
-
-- ヒント２：`mlogit` の [解説](https://cran.r-project.org/web/packages/mlogit/vignettes/c3.rum.html) が参考に。
-
-
-- 上の例を一部改造：
-```{r, eval = TRUE, message=FALSE}
-library("mlogit")
-data("ModeCanada", package = "mlogit")
-MC <- dfidx(ModeCanada, subset = noalt == 4)
-ml.MC1 <- mlogit(choice ~ cost + freq  | income | 0, MC, 
-                 alt.subset = c("car", "train", "air"), reflevel = "car")
-```
-
-
-- この例では
-  - 交通手段選択：Train, Air, Car。 なお、Carを基準オプションとしている。
-  - 選択肢ごとに変わる変数として、`cost`,`freq`,`ovt`
-  - 消費者属性は`income`。この属性が、選択肢によって影響が異なる（つまり係数が異なる）。
-  
----
-```{r}
-summary(ml.MC1)
-```
-
-
-
----
-## 【難】課題４：ランダム係数ロジットモデル
-
-- (これは今日やる課題ではなく、ブートキャンプ後の発展課題として考えてください。)
-
-
-- ランダム係数ロジットモデルについて、`mlogit`パッケージを使わずに、フルスクラッチで推定せよ。
-
-
-- 尤度関数の定義については補足資料を参照。また、Train Chapter 6も参考に。
-
-
+- もし質問を一家しかしなかった場合、すべてのパラメタは推定できるか？
+- もしアウトサイドオプションがな買った場合、すべてのパラメタは推定できるか？？
 
 
