--- a/slide_2_practice.Rmd
+++ b/slide_2_practice.Rmd
@@ -1,5 +1,5 @@
 ---
-title: '離散選択モデル: 演習'
+title: '離散選択モデル: 演習編'
 subtitle: '応用社会科学RAブートキャンプ'
 author: '講師: 遠山祐太 (早稲田大学)'
 date: '最終更新: `r format(Sys.time(), format = "%Y-%m-%d %X")`'
@@ -20,15 +20,6 @@ class: title-slide-section, center, middle
 name: logistics
 # 演習課題
 
----
-## はじめに
-
-- 前半の講義内容に基づいた演習問題をいくつか紹介します。
-
-
-- 自分で解けそう＆気になった問題から取り掛かってください。
-
-
 
 ---
 ## 課題１：RA ブートキャンプのサーベイデータ
@@ -37,7 +28,7 @@ name: logistics
 - 皆さんに回答してもらったきのこ・たけのこサーベイの結果が`data/KTSurvey_RABootcamp2024_cleaned.csv` にあります。
 
 
-- このデータを用いて、講義パートで行った分析(`mlogit`での推定)を実行せよ。また、結果の差について検討＆議論せよ。
+- このデータを用いて、講義パートで行った分析(`mlogit`での推定)を再現してください。
 
 
 - コメント：データは最低限のクリーニングをしたもの。    
