--- a/slide_1_lecture.Rmd
+++ b/slide_1_lecture.Rmd
@@ -1,5 +1,5 @@
 ---
-title: '離散選択モデル: 講義スライド'
+title: '離散選択モデル: 講義編'
 subtitle: '応用社会科学RAブートキャンプ'
 author: '講師: 遠山祐太 (早稲田大学)'
 date: '最終更新: `r format(Sys.time(), format = "%Y-%m-%d %X")`'
