--- a/slide_2_practice.Rmd
+++ b/slide_2_practice.Rmd
@@ -22,25 +22,31 @@ name: logistics
 
 
 ---
-## 課題１：RA ブートキャンプのサーベイデータ
+## 課題１：新データでの再現
 
 
-- 皆さんに回答してもらったきのこ・たけのこサーベイの結果が`data/KTSurvey_RABootcamp2024_cleaned.csv` にあります。
+- 皆さんに回答してもらったきのこ・たけのこサーベイの結果が`data/KinokoTakenokoSurvey_RABootcamp2024.csv` にあります。
 
 
 - このデータを用いて、講義パートで行った分析(`mlogit`での推定)を再現してください。
+  - ひとまず多項ロジットモデル(消費者属性あり・なし両方のバージョンで)に取り組んで下さい。
+  - 課題２が終わって余裕があればランダム係数ロジットも試してみましょう。
 
 
 - コメント：データは最低限のクリーニングをしたもの。    
-  - 変数名は講義パートのデータ(`data/KTSurvey_Spring2023_cleaned.csv`)と同じ
-  - 変数の中身は、講義パートとは異なっている。
+  - 変数名は講義パートのデータ(`data/KinokoTakenokoSurvey_IOSpring2024.csv`)と同じ
+  - 変数の中身は、講義パートと若干異なっている部分があるので要注意。
   - データ共有についての不同意者の回答を落としている。
 
 ---
-## 課題２：離散選択モデルの定式化
+## 課題２：支払い意思額の計算・価格弾力性の計算
 
 
-- もし質問を一家しかしなかった場合、すべてのパラメタは推定できるか？
-- もしアウトサイドオプションがな買った場合、すべてのパラメタは推定できるか？？
+- 以下では消費者属性なしのモデル＋ブートキャンプデータで考えます。
 
+
+- 推定結果に基づき、きのこの山・たけのこの里への支払い意思額を求めてください。
+
+
+- きのこの山とたけのこの里の価格が両方200円だったときの、きのこの山の自己価格弾力性を計算してください。
 
