--- a/slide_2_practice.Rmd
+++ b/slide_2_practice.Rmd
@@ -22,15 +22,21 @@ name: logistics
 
 
 ---
-## 課題１：新データでの再現
+## はじめに
+
+- 演習として４つ課題を用意しています。順番に取り組んでください。
+
+
+- なお、課題１・２については講師の方でもある程度確認していますが、課題３・４については行っていません。よって、思わぬエラーなどがあるかもしれません（特に課題４）。
+
+---
+## 課題１：新データでの再現エクササイズ
 
 
 - 皆さんに回答してもらったきのこ・たけのこサーベイの結果が`data/KinokoTakenokoSurvey_RABootcamp2024.csv` にあります。
 
-
 - このデータを用いて、講義パートで行った分析(`mlogit`での推定)を再現してください。
-  - ひとまず多項ロジットモデル(消費者属性あり・なし両方のバージョンで)に取り組んで下さい。
-  - 課題２が終わって余裕があればランダム係数ロジットも試してみましょう。
+  - 消費者属性なしの多項ロジットモデルに取り組んでください。
 
 
 - コメント：データは最低限のクリーニングをしたもの。    
@@ -50,3 +56,19 @@ name: logistics
 
 - きのこの山とたけのこの里の価格が両方200円だったときの、きのこの山の自己価格弾力性を計算してください。
 
+---
+## 課題３：ランダム係数ロジット
+
+- 新データを利用して、ランダム係数ロジットモデルの推定をしてください。なお、余裕があれば、係数の分布のプロット、需要関数のプロットなども取り組んでください。
+
+
+---
+## 【チャレンジ】課題４：消費者属性を利用した多項ロジット
+
+- 新データを利用して、消費者属性を利用した多項ロジットモデルを推定してください。
+
+
+- なお、新データでは、講義コード通りの定式化では推定がうまくいきません。なぜ上手く行かないか？、またどのような定式化にすればよいか、を考えてください。
+
+
+- 【ヒント】消費者属性の分布について見てみましょう。
